--- a/web/error.html
+++ b/web/error.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-	
-	<head>
+
+<head>
 	<title>错误页</title>
 	<meta http-equiv="content-Type" content="text/html; charset=utf8">
-	</head>
-	<body>
-		<p>您请求的页面不存在</p>
-		<img src="404.jpg" alt="404"width=700 height=500>
-        <a href="/">回到根目录</a>
-	</body>
+</head>
+
+<body>
+	<div align="center" style="text-align: center;font-size: 20px;">
+		<!-- <p>您请求的页面不存在</p> -->
+		<img src="404.jpg" alt="404" width=1280 height=700>
+		<a href="/">返回</a>
+	</div>
+
+</body>
+
 </html>
